test/spec_vectors/func/fail/module_30.wat
(module (func $type-value-void-vs-num (result i32) (nop)))